--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "serve": "yarn build && nohup warlock start > /dev/null 2>&1",
         "lint": "npx eslint --fix -c ./.eslintrc.json ./src --max-warnings=0",
         "format": "npx prettier --write ./src/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json",
-        "tsc": "npx tsc --noEmit"
+        "tsc": "npx tsc --noEmit",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@mongez/collection": "^1.2.0",
@@ -47,7 +48,8 @@
         "prettier-plugin-organize-imports": "^3.2.4",
         "typescript": "^5.4.5",
         "vite": "^5.2.8",
-        "vitest": "^1.5.0"
+        "vitest": "^1.5.0",
+        "husky": "^8.0.0"
     },
     "huskier": {
         "hooks": {
